# CPU-simulator

./: .gitignore  1.out  CMakeLists.txt  CPU_stote.cpp  README.md  code  compare  compare.cpp  debug_main.cpp  main.cpp  simpleCPU.cpp  simpleCUP.cpp  simple_test.cpp  simulator  test_minimal.cpp  test_ooo.cpp  test_partial.cpp  test_processor  test_processor.cpp  test_simple.cpp  to_do_list.txt
include/: cpu_state.h  instruction.h  process.h  riscv_simulator.h
last_version/: main  simpleCPU.cpp
src/: cpu_state.cpp  instruction.cpp  process.cpp  processor.cpp  riscv_simulator.cpp
